--- a/app/src/main/res/layout/activity_customer_details.xml
+++ b/app/src/main/res/layout/activity_customer_details.xml
@@ -23,23 +23,22 @@
         android:id="@+id/etFirstName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:hint="First Name"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
         android:layout_below="@id/tvCustomers"
-        />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:hint="First Name"
+        android:textSize="18dp" />
+
     <EditText
         android:id="@+id/etLastName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:hint="Last Name"
+        android:layout_below="@id/etFirstName"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_below="@id/etFirstName"
-        />
+        android:hint="Last Name"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/etAddress"
@@ -52,16 +51,16 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/etLastName"
         />
+
     <EditText
         android:id="@+id/etCity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:hint="City"
+        android:layout_below="@id/etAddress"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_below="@id/etAddress"
-        />
+        android:hint="City"
+        android:textSize="18dp" />
     <EditText
         android:id="@+id/etProvince"
         android:layout_width="match_parent"
