--- a/app/src/main/res/layout/activity_customers.xml
+++ b/app/src/main/res/layout/activity_customers.xml
@@ -35,15 +35,18 @@
     />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnAddCustomers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnCustAdd"
         android:layout_below="@id/lvCustomers"
-        android:text="Add"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:height="60dp"
         android:backgroundTint="@color/dark_orange"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"></com.google.android.material.button.MaterialButton>
+        android:text="Add"></com.google.android.material.button.MaterialButton>
 
 
 
