--- a/app/src/main/res/menu/travel_experts_menu.xml
+++ b/app/src/main/res/menu/travel_experts_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home" />
-    <item android:title="Log Out" />
+    <item
+        android:id="@+id/miHome"
+        android:title="Home" />
+    <item
+        android:id="@+id/miLogout"
+        android:title="Log Out" />
 </menu>
