--- a/app/src/main/res/layout/activity_bookings.xml
+++ b/app/src/main/res/layout/activity_bookings.xml
@@ -39,13 +39,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/lvBookings"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
+        android:layout_alignStart="@+id/lvBookings"
+        android:layout_alignEnd="@+id/lvBookings"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginBottom="20dp"
         android:height="60dp"
         android:backgroundTint="@color/dark_orange"
+        android:minHeight="60dp"
         android:text="Add"></com.google.android.material.button.MaterialButton>
 
 
